popravljeni su PUT i DELETE zahtev za swagger
